--- a/capdows_test/Cargo.toml
+++ b/capdows_test/Cargo.toml
@@ -3,6 +3,9 @@ name = "capdows_test"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+either = "1.13.0"
+
 [dependencies.capdows]
 path = "../capdows"
 
