--- a/capdows_example/Cargo.toml
+++ b/capdows_example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "capdows_example"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
@@ -12,5 +12,6 @@ path = "../capdows"
 [dependencies.capdows_controls]
 path = "../capdows_controls"
 
-[build-dependencies]
-winres = "0.1.12"
+[build-dependencies.capdows_resource]
+path = "../capdows_resource"
+
