--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "capdows"
 version = "0.0.1"
-edition = "2021"
+edition = "2024"
+
+[features]
+
 
 [dependencies]
-either = "1.13.0"
+either = "1.14.0"
+
 
 [dependencies.windows]
 version = "0.60.0"
