--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "capdows"
-version = "0.0.1"
-edition = "2024"
-
+authors.workspace = true
+version.workspace = true
+license.workspace = true
+edition.workspace = true
 [features]
 
 
