--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "capdows_controls"
-version = "0.0.1"
-edition = "2024"
+authors.workspace = true
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+
 [features]
 WindowFinder = []
 
