添加版本信息功能

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ resolver = "3"
 members = [
     "capdows",
     "controls",
-    "example"
+    "example",
+    "res"
 ]
 [workspace.package]
 authors = ["slyfhuy68(github.com)"]
