--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ members = [
 [workspace.package]
 authors = ["slyfhuy68(github.com)"]
 version = "0.0.1"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 edition = "2024"
