--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -5,12 +5,10 @@ version.workspace = true
 license.workspace = true
 edition.workspace = true
 
-[features]
-WindowFinder = []
-
 [dependencies]
 either = "1.14.0"
-
+[build-dependencies]
+embed-resource = "3.0.1"
 [dependencies.windows]
 version = "0.60.0"
 features = [
