--- a/res/Cargo.toml
+++ b/res/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 
 [dependencies]
 either = "1.14.0"
+embed-resource = "3.0.1"
+
 
 [dependencies.windows]
 version = "0.60.0"
