--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -21,4 +21,6 @@ features = [
     "Win32_System_Threading",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Controls",
+    "Win32_UI_Input",
+    "Win32_UI_Input_KeyboardAndMouse",
 ]
