--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -19,6 +19,7 @@ features = [
     "Win32_System_Threading",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Controls",
+    "Win32_UI_Input",
 ]
 [dependencies.capdows]
 path = "../capdows"
