--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 
 [dependencies]
 either = "1.14.0"
+paste = "1.0.15"
 [build-dependencies]
 embed-resource = "3.0.1"
 [dependencies.windows]
