使用宏生成代码简化代码

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "3"
 members = [
     "capdows",
     "controls",
-    "example",
+    "example", "macros",
     "res"
 ]
 [workspace.package]
