[未完成，仍有此问题]尝试解决自引用类型移动时的问题

--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 
 [dependencies]
 either = "1.14.0"
+tokio = { version = "1.44.2", features = ["rt"] }
 
 
 [dependencies.windows]
