实现字符串表，更新示例

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "controls",
     "example", 
     "macros",
-    "res"
+    "res",
+    "utility"
 ]
 [workspace.package]
 authors = ["slyfhuy68(github.com)"]
