--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 
 [dependencies]
 either = "1.14.0"
+euclid = "0.22.11"
 tokio = { version = "1.44.2", features = ["rt"] }
 windows-link = "0.1.1"
 
