[55%完成]修改控件代码适应新定义
此版本不可用！请从提交记录里找到"更新rust版本+5400615"版本使用

--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -27,3 +27,5 @@ features = [
 path = "../capdows"
 [dependencies.capdows_macros]
 path = "../macros"
+[dependencies.capdows_resource]
+path = "../res"
