--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -20,8 +20,10 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_UI_Shell",
     "Win32_Foundation",
+    "Win32_Storage_FileSystem",
     "Win32_Graphics_Gdi",
     "Win32_System_Threading",
+    "Win32_System_SystemServices",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Controls",
     "Win32_UI_Input",
