--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -11,17 +11,20 @@ euclid = "0.22.11"
 
 [build-dependencies]
 embed-resource = "3.0.1"
-[dependencies.windows]
-version = "0.61.1"
+[dependencies.windows-sys]
+version = "0.60.2"
 features = [
-    "Win32_System_SystemServices",
+    "Win32_System_LibraryLoader",
     "Win32_UI_Shell",
     "Win32_Foundation",
+    "Win32_Storage_FileSystem",
     "Win32_Graphics_Gdi",
     "Win32_System_Threading",
+    "Win32_System_SystemServices",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Controls",
     "Win32_UI_Input",
+    "Win32_UI_Input_KeyboardAndMouse",
 ]
 [dependencies.capdows]
 path = "../capdows"
