--- a/res/Cargo.toml
+++ b/res/Cargo.toml
@@ -8,16 +8,16 @@ edition.workspace = true
 [dependencies]
 either = "1.14.0"
 embed-resource = "3.0.2"
-
-
 [dependencies.windows-sys]
 version = "0.60.2"
 features = [
     "Win32_System_LibraryLoader",
     "Win32_UI_Shell",
     "Win32_Foundation",
+    "Win32_Storage_FileSystem",
     "Win32_Graphics_Gdi",
     "Win32_System_Threading",
+    "Win32_System_SystemServices",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Controls",
     "Win32_UI_Input",
