--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -9,8 +9,8 @@ edition.workspace = true
 either = "1.14.0"
 euclid = "0.22.11"
 
-[build-dependencies]
-embed-resource = "3.0.1"
+[build-dependencies.capdows_resource]
+path = "../res"
 [dependencies.windows-sys]
 version = "0.60.2"
 features = [
