[69.7%完成]修改代码适应新定义

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -18,3 +18,6 @@ path = "../controls"
 [build-dependencies.capdows_resource]
 path = "../res"
 
+[build-dependencies.capdows_controls]
+path = "../controls"
+
