[69.8%完成]修改代码适应新定义

--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -10,6 +10,7 @@ either = "1.14.0"
 euclid = "0.22.11"
 
 [dependencies.capdows]
+features = ["timeout_msg_box"]
 path = "../capdows"
 
 [dependencies.capdows_controls]
