--- a/capdows/Cargo.toml
+++ b/capdows/Cargo.toml
@@ -8,7 +8,7 @@ edition.workspace = true
 [dependencies]
 either = "1.14.0"
 euclid = "0.22.11"
-windows-targets = "0.53.2"
+windows-link = "0.1.3"
 
 [dependencies.capdows_utility]
 path = "../utility"
