--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -8,7 +8,8 @@ edition.workspace = true
 [dependencies]
 either = "1.14.0"
 euclid = "0.22.11"
-
+[build-dependencies]
+euclid = "0.22.11"
 [dependencies.capdows]
 features = ["timeout_msg_box"]
 path = "../capdows"
