--- a/controls/Cargo.toml
+++ b/controls/Cargo.toml
@@ -14,17 +14,18 @@ path = "../res"
 [dependencies.windows-sys]
 version = "0.60.2"
 features = [
-    "Win32_System_LibraryLoader",
-    "Win32_UI_Shell",
     "Win32_Foundation",
-    "Win32_Storage_FileSystem",
+    "Win32_UI_Shell",
+    "Win32_UI_Input",
+    "Win32_UI_Controls",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Gdi",
     "Win32_System_Threading",
+    "Win32_System_LibraryLoader",
     "Win32_System_SystemServices",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_UI_Controls",
-    "Win32_UI_Input",
-    "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_Storage_FileSystem",
+    "Win32_Globalization"
 ]
 [dependencies.capdows]
 path = "../capdows"
